// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly non root path 1`] = `
Array [
  <header
    className="header"
  >
    <h3>
      <a
        href="/"
      >
        title
      </a>
    </h3>
    <div
      className="darkLightMode "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
    >
      <svg
        className="feather feather-sun"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <g
          fill="none"
          strokeLinecap="round"
          strokeWidth="2"
        >
          <circle
            cx="12"
            cy="12"
            r="5"
          />
          <path
            d="M12 1v2"
          />
          <path
            d="M12 21v2"
          />
          <path
            d="M4.22 4.22l1.42 1.42"
          />
          <path
            d="M18.36 18.36l1.42 1.42"
          />
          <path
            d="M1 12h2"
          />
          <path
            d="M21 12h2"
          />
          <path
            d="M4.22 19.78l1.42-1.42"
          />
          <path
            d="M18.36 5.64l1.42-1.42"
          />
        </g>
      </svg>
      <input
        aria-label="Switch between Dark and Light mode"
        checked={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
    </div>
  </header>,
  <div>
    content
  </div>,
]
`;

exports[`renders correctly root path 1`] = `
Array [
  <header
    className="header"
  >
    <h1>
      <a
        href="/"
      >
        title
      </a>
    </h1>
    <div
      className="darkLightMode "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
    >
      <svg
        className="feather feather-sun"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <g
          fill="none"
          strokeLinecap="round"
          strokeWidth="2"
        >
          <circle
            cx="12"
            cy="12"
            r="5"
          />
          <path
            d="M12 1v2"
          />
          <path
            d="M12 21v2"
          />
          <path
            d="M4.22 4.22l1.42 1.42"
          />
          <path
            d="M18.36 18.36l1.42 1.42"
          />
          <path
            d="M1 12h2"
          />
          <path
            d="M21 12h2"
          />
          <path
            d="M4.22 19.78l1.42-1.42"
          />
          <path
            d="M18.36 5.64l1.42-1.42"
          />
        </g>
      </svg>
      <input
        aria-label="Switch between Dark and Light mode"
        checked={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
    </div>
  </header>,
  <div>
    content
  </div>,
]
`;
